--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
-    "staging": "pavo-c3f2e"
+    "staging": "pavo-c3f2e",
+    "default": "pavo-c3f2e"
   },
   "targets": {}
 }
